[package]
name = "rustymixer-analysis"
description = "Audio analysis: BPM detection, key detection, waveform analysis for RustyMixer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustymixer-core = { workspace = true }
rustymixer-decode = { workspace = true }
rustfft = { workspace = true }
realfft = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
symphonia = { workspace = true }
