[package]
name = "rustymixer-engine"
description = "Real-time audio mixing engine for RustyMixer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustymixer-core = { workspace = true }
rustymixer-decode = { workspace = true }
crossbeam = { workspace = true }
ringbuf = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
