[package]
name = "rustymixer-io"
description = "Audio I/O backends (cpal, WebAudio) for RustyMixer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustymixer-core = { workspace = true }
ringbuf = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioBuffer",
    "AudioDestinationNode",
    "BaseAudioContext",
    "AudioNode",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
