[package]
name = "rustymixer-library"
description = "Music library management with SQLite for RustyMixer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustymixer-core = { workspace = true }
rusqlite = { workspace = true }
lofty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
